--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "@vitejs/plugin-react": "^4.4.1",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "@vitest/ui": "^3.1.3",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
+    "postcss": "^8.5.6",
+    "postcss-nesting": "^14.0.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1",
